# autoResum

./: .dockerignore  .gitattributes  .gitignore  main.py  main_simple.py  nixpacks.toml  nixpacks_simple.toml  pyproject.toml  railway.toml  railway_simple.toml  render.yaml  requirements.txt  setup.py  start.sh  vercel.json
.github/workflows/: ci.yml
backend/: config.py  health.py  main.py  nixpacks.toml  requirements.txt  run.py
backend/services/: __init__.py  nlp_processor.py  summarizer.py
backend_simple/: main.py
frontend/: env.production  index.html  package-lock.json  tailwind.config.js
frontend/src/: App.vue  style.css
